@@ -1080,8 +1080,8 @@ class CustomMeetingItem(MeetingItem):
 
         if not hidden and \
            adviceGivenOnLocalized and \
-           (adviceType == u'positive_finance' or adviceType == u'negative_finance'):
-            if adviceType == u'positive_finance':
+           (adviceType in (u'positive_finance', u'positive_with_remarks_finance', u'negative_finance')):
+            if adviceType in (u'positive_finance', u'positive_with_remarks_finance'):
                 adviceTypeFr = 'favorable'
             else:
                 adviceTypeFr = 'défavorable'
@@ -1338,9 +1338,14 @@ class CustomMeetingConfig(MeetingConfig):
         d = "PloneMeeting"
         adviceTypes = old_listAdviceTypes(self)
         financeAdviceTypes = DisplayList((
-            ("positive_finance", translate('positive_finance', domain=d, context=self.REQUEST)),
-            ("negative_finance", translate('negative_finance', domain=d, context=self.REQUEST)),
-            ("not_required_finance", translate('not_required_finance', domain=d, context=self.REQUEST)),
+            ("positive_finance",
+             translate('positive_finance', domain=d, context=self.REQUEST)),
+            ("positive_with_remarks_finance",
+             translate('positive_with_remarks_finance', domain=d, context=self.REQUEST)),
+            ("negative_finance",
+             translate('negative_finance', domain=d, context=self.REQUEST)),
+            ("not_required_finance",
+             translate('not_required_finance', domain=d, context=self.REQUEST)),
         ))
         return financeAdviceTypes + adviceTypes
     MeetingConfig.listAdviceTypes = listAdviceTypes
@@ -2106,7 +2111,7 @@ class MeetingItemCollegeLiegeWorkflowConditions(MeetingItemWorkflowConditions):
             and validate an item that is in the state 'itemcreated';
           - it does have a finance advice : it will be automatically validated when
             the advice will be 'signed' by the finance group if the advice type
-            is 'positive_finance' or 'not_required_finance' or it can be manually
+            is 'positive_finance/positive_with_remarks_finance' or 'not_required_finance' or it can be manually
             validated by the director if item emergency has been asked and motivated on the item.
         """
         res = False
