@@ -313,7 +313,8 @@ collegeMeeting.meetingAppDefaultView = 'searchmyitems'
 collegeMeeting.itemDocFormats = ('odt', 'pdf')
 collegeMeeting.meetingDocFormats = ('odt', 'pdf')
 collegeMeeting.useAdvices = True
-collegeMeeting.usedAdviceTypes = ('positive_finance', 'negative_finance', 'not_required_finance',
+collegeMeeting.usedAdviceTypes = ('positive_finance', 'positive_with_remarks_finance',
+                                  'negative_finance', 'not_required_finance',
                                   'positive', 'positive_with_remarks', 'negative', 'nil')
 collegeMeeting.itemAdviceStates = ('itemcreated_waiting_advices',
                                    'proposed_to_internal_reviewer_waiting_advices')
