@@ -33,3 +33,6 @@ Products.MeetingLiege Changelog
   is "delayed", delete the item that was sent to the Council
 - Do every manuallyLinkedItems of an item having finance advice accessible to the finance advisers
 - Hide some elements for restricted power observers : some fileters, columns and access to element's history
+- Added 'positive_with_remarks_finance' to the list of advice_type selectable by finance advisers,
+  this behaves exactly like 'positive_finance' in every cases, except the icon that shows to the user
+  that a comment has been added to the advice
